--- a/.github/workflows/deploy_to_pages.yml
+++ b/.github/workflows/deploy_to_pages.yml
@@ -11,11 +11,14 @@ jobs:
 
       - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
         run: |
+          export GH_USER=${{ secrets.GH_USER }}
+          export GH_TOKEN=${{ secrets.GH_TOKEN }}
+          export DOMAIN=${{ secrets.DOMAIN }}
           python3  build.py
-          
+
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          ACCESS_TOKEN: ${{ secrets.GH_TOKEN }}
           BRANCH: gh-pages # The branch the action should deploy to.
           FOLDER: public # The folder the action should deploy.
