--- a/code-editor/package.json
+++ b/code-editor/package.json
@@ -1,13 +1,14 @@
 {
   "name": "sn-code-editor",
-  "version": "1.3.7",
+  "version": "1.3.8",
   "description": "A code editor for Standard Notes",
   "main": "dist/main.js",
   "author": "Standard Notes <hello@standardnotes.org>",
   "license": "AGPL-3.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.config.js",
+    "start": "http-server . --cors & webpack --progress --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js",
     "lint": "eslint src --ext .js",
     "lint:fix": "yarn lint --fix"
   },
@@ -20,11 +21,14 @@
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.0.1",
     "eslint": "^7.18.0",
+    "http-server": "^0.12.3",
     "mini-css-extract-plugin": "^1.3.5",
+    "remove-files-webpack-plugin": "^1.4.4",
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
     "sn-stylekit": "^2.1.1",
     "webpack": "^5.19.0",
-    "webpack-cli": "^4.4.0"
+    "webpack-cli": "^4.4.0",
+    "webpack-merge": "^5.7.3"
   }
 }
