--- a/extensions/plus-editor.yaml
+++ b/extensions/plus-editor.yaml
@@ -1,8 +1,7 @@
 index:
   area: editor-editor
   content_type: SN|Component
-  description: From highlighting to custom font sizes and colors, to tables and lists,
-    this editor is perfect for crafting any document.
+  description: From highlighting to custom font sizes and colors, to tables and lists, this editor is perfect for crafting any document.
   flags: []
   identifier: org.standardnotes.plus-editor
   marketing_url: https://standardnotes.org/extensions/plus-editor
@@ -10,4 +9,4 @@ index:
   thumbnail_url: https://s3.amazonaws.com/standard-notes/screenshots/models/editors/plus-editor.jpg
 meta:
   github: sn-extensions/plus-editor
-  main: index.html
+  main: dist/index.html
