--- a/extensions/code-editor.yaml
+++ b/extensions/code-editor.yaml
@@ -3,7 +3,7 @@ index:
   content_type: SN|Component
   description: Syntax highlighting and convenient keyboard shortcuts for over 120
     programming languages. Ideal for code snippets and procedures.
-  identifier: org.standardnotes.code-editor
+  identifier: com.standardnotes.code-editor
   marketing_url: https://standardnotes.org/extensions/code-editor
   name: Code Editor
   thumbnail_url: https://s3.amazonaws.com/standard-notes/screenshots/models/editors/code.jpg
