--- a/extensions/no-distraction-theme.yaml
+++ b/extensions/no-distraction-theme.yaml
@@ -7,7 +7,7 @@ index:
       64H88c-26.6 0-48 21.6-48 48v288c0 26.4 21.4 48 48 48h336c26.4 0 48-21.6 48-48V112c0-26.4-21.4-48-48-48zm0
       336H88V176h336v224z"/></svg>
     type: svg
-  identifier: org.standardnotes.theme-no-distraction
+  identifier: com.standardnotes.theme-no-distraction
   layerable: true
   marketing_url: https://standardnotes.org/extensions/no-distraction
   name: No Distraction
