--- a/extensions/token-vault.yaml
+++ b/extensions/token-vault.yaml
@@ -6,7 +6,7 @@ index:
     to start over when you get a new device.
   flags:
   - Beta
-  identifier: org.standardnotes.token-vault
+  identifier: com.standardnotes.token-vault
   name: TokenVault
   thumbnail_url: https://standard-notes.s3.amazonaws.com/screenshots/models/editors/token-vault.png
 meta:
