--- a/extensions/autobiography-theme.yaml
+++ b/extensions/autobiography-theme.yaml
@@ -7,7 +7,7 @@ index:
     border_color: '#9D7441'
     foreground_color: '#ECE4DB'
     type: circle
-  identifier: org.standardnotes.theme-autobiography
+  identifier: com.standardnotes.theme-autobiography
   name: Autobiography
   thumbnail_url: https://s3.amazonaws.com/standard-notes/screenshots/models/themes/autobiography.jpg
 meta:
