--- a/extensions/autocomplete-tags.yaml
+++ b/extensions/autocomplete-tags.yaml
@@ -3,7 +3,7 @@ index:
   content_type: SN|Component
   description: Work more efficiently by quickly selecting from a live list of tags
     while you type. Supports keyboard shortcuts and folders.
-  identifier: org.standardnotes.autocomplete-tags
+  identifier: com.standardnotes.autocomplete-tags
   name: Quick Tags
   thumbnail_url: https://s3.amazonaws.com/standard-notes/screenshots/models/components/autocomplete.jpg
 meta:
