--- a/extensions/minimal-markdown-editor.yaml
+++ b/extensions/minimal-markdown-editor.yaml
@@ -4,7 +4,7 @@ index:
   description: A minimal Markdown editor with live rendering and in-text search via
     Ctrl/Cmd + F
   flags: []
-  identifier: org.standardnotes.minimal-markdown-editor
+  identifier: com.standardnotes.minimal-markdown-editor
   marketing_url: https://standardnotes.org/extensions/minimal-markdown-editor
   name: Minimal Markdown Editor
   thumbnail_url: https://s3.amazonaws.com/standard-notes/screenshots/models/editors/min-markdown.jpg
