--- a/extensions/titanium-theme.yaml
+++ b/extensions/titanium-theme.yaml
@@ -7,7 +7,7 @@ index:
     border_color: '#6e2b9e'
     foreground_color: '#ffffff'
     type: circle
-  identifier: org.standardnotes.theme-titanium
+  identifier: com.standardnotes.theme-titanium
   marketing_url: https://standardnotes.org/extensions/titanium
   name: Titanium
   thumbnail_url: https://s3.amazonaws.com/standard-notes/screenshots/models/themes/titanium-with-mobile.jpg
