--- a/extensions/file-safe.yaml
+++ b/extensions/file-safe.yaml
@@ -9,4 +9,4 @@ index:
   thumbnail_url: https://s3.amazonaws.com/standard-notes/screenshots/models/FileSafe-banner.png
 meta:
   github: standardnotes/filesafe-bar
-  main: app/index.html
+  main: dist/index.html
