--- a/.github/workflows/deploy_to_pages.yml
+++ b/.github/workflows/deploy_to_pages.yml
@@ -3,9 +3,9 @@ name: Build and Deploy
 on: 
   push:
     branches:
-      - patch-1
-  schedule:
-      - cron: '0 0 * * *' # Once per day at midnight
+      - master
+#   schedule:
+#       - cron: '0 0 * * *' # Once per day at midnight
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
