--- a/.github/workflows/deploy_to_pages.yml
+++ b/.github/workflows/deploy_to_pages.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - master
-#   schedule:
-#       - cron: '0 0 * * *' # Once per day at midnight
+  schedule:
+      - cron: '0 0 * * *' # Once per day at midnight
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
